Fixed font being too big in New Game Button

--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 #newGameButton:hover {
@@ -230,7 +230,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 #returnButton:hover {
